# StudIA

./: .gitignore  README.md
.github/prompts/: plan-advancedBackendArchitectureForRagBasedStudyAssistant.prompt.md
backend/: README.md  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/models/: activity_log.py  ai_output.py  course.py  document.py
backend/app/routes/: activity_logs.py  ai_outputs.py  courses.py  documents.py
backend/app/services/generative/: consts.py  rag.py
backend/app/services/pdf_parser/: pdf_parser.py  preprocessor.py
backend/app/services/relational_db_manager/: activity_log_manager.py  ai_output_manager.py  course_manager.py  document_manager.py  supabase_service.py
backend/app/services/vector_db_manager/: embedding.py  milvus_collection.py  milvus_connection.py  milvus_database.py  mongo_manager.py
docs/: README.md  architecture.md  backend_modules.md  backend_refactor_plan.md  frontend_architecture.md  frontend_modules.md  roadmap.md
frontend/: angular.json  package-lock.json  package.json
frontend/studia-frontend/: README.md  package.json
frontend/studia-frontend/src/: index.html
frontend/studia-frontend/src/app/: app.component.spec.ts  app.component.ts
